<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:text="New quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="30dp"
        android:id="@+id/title"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/quizq"
        android:hint="Enter Quiz QUESTION"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choice1"
        android:hint="Enter Choice"
        android:gravity="center"
        android:layout_below="@+id/quizq"
        android:layout_marginTop="10dp"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choice2"
        android:hint="Enter Choice"
        android:gravity="center"
        android:layout_below="@+id/choice1"
        android:layout_marginTop="10dp"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choice3"
        android:hint="Enter Choice"
        android:gravity="center"
        android:layout_below="@+id/choice2"
        android:layout_marginTop="10dp"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choice4"
        android:hint="Enter Choice"
        android:gravity="center"
        android:layout_below="@+id/choice3"
        android:layout_marginTop="10dp"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ANSWER"
        android:hint="Enter answer"
        android:gravity="center"
        android:layout_below="@+id/choice4"
        android:layout_marginTop="10dp"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:layout_below="@id/ANSWER"
        android:text="Submit"
        android:layout_marginTop="10dp"/>

</LinearLayout>