...
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">
                    <Button
                        android:layout_width="170dp"
                        android:layout_height="150dp"
                        android:id="@+id/button1"
                        android:background="#286f88"
                        android:text="Classroom1"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:singleLine="false"
                        android:paddingBottom="10dp"/>

                </RelativeLayout>
...
